민히는 바보당

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,492 @@
-/* 개인고객 회원정보보기 */
+/* 공통 */
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Verdana, sans-serif;
+}
+
+img {
+    vertical-align: middle;
+}
+
+.frame {
+    margin-top: 50px;
+    margin-inline: 200px;
+}
+
+/* =================정보네비게이션바================= */
+.default {
+    height: 100px;
+    width: 200px;
+
+}
+
+.company-image {
+    margin: 20px;
+    text-align: center;
+}
+
+.btn {
+    line-height: 1;
+}
+
+.nav-link {
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.home {
+    flex: 0;
+}
+
+.small-title {
+    font-size: 25px;
+    font-weight: 500px;
+}
+
+
+/* =============================index============================= */
+.mySlides {
+    display: none;
+}
+
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 777px;
+    position: relative;
+    margin: auto;
+    margin-bottom: 20px;
+    /* 아래쪽 여백 추가 */
+
+}
+
+.mySlides img {
+    width: 777px;
+    height: 146px;
+}
+
+/* The dots/bullets/indicators */
+.index-dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.index-active {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+    .text {
+        font-size: 11px
+    }
+}
+
+/*파워링크, 채용공고이미지 */
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 35px;
+    margin-left: 10px;
+}
+
+.rounded-image {
+    margin: 10px;
+    display: inline-block;
+}
+
+.image-container a img {
+    width: 245px;
+    height: auto;
+}
+
+.image-container img {
+    max-width: 100%;
+    height: auto;
+}
+
+
+/*파워링크 글자*/
+.파워링크 {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+/*파워링크 글자*/
+.채용공고 {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+/*=============================companyApplyList=============================*/
+.companyApplyList-default {
+    height: 100px;
+    width: 200px;
+
+}
+
+.companyApplyList-image {
+    margin: 20px;
+    text-align: center;
+}
+
+.nav-link {
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.small-title {
+    font-size: 25px;
+    font-weight: 500px;
+}
+
+/*=============================companyNoticeList=============================*/
+.notice-title {
+    font-size: 25px;
+}
+
+/*=============================companyUpdate=============================*/
+.card {
+    max-width: 400px;
+    /* 변경된 최대 너비 설정 */
+    margin: auto;
+    padding: 10px;
+    /* 변경된 패딩 설정 */
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Noto Sans KR", sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+li {
+    list-style: none;
+}
+
+.wrap {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(0, 0, 0, 0.1);
+}
+
+/*여기*/
+.login {
+    width: 30%;
+    height: 98vh;
+    background: white;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+}
+
+h2 {
+    color: black;
+    font-size: 2em;
+    margin-top: 100px;
+}
+
+.login_id {
+    margin-top: 20px;
+    width: 80%;
+}
+
+.login_id input {
+    width: 100%;
+    height: 50px;
+    border-radius: 30px;
+    margin-top: 10px;
+    padding: 0px 20px;
+    border: 1px solid lightgray;
+    outline: none;
+}
+
+.login_pw {
+    margin-top: 20px;
+    width: 80%;
+}
+
+.login_pw input {
+    width: 100%;
+    height: 50px;
+    border-radius: 30px;
+    margin-top: 10px;
+    padding: 0px 20px;
+    border: 1px solid lightgray;
+    outline: none;
+}
+
+.login_etc {
+    padding: 10px;
+    width: 80%;
+    font-size: 14px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+}
+
+.submit {
+    margin-top: 50px;
+    width: 80%;
+
+}
+
+.submit input {
+    width: 100%;
+    height: 50px;
+    border: 0;
+    outline: none;
+    border-radius: 40px;
+    background-color: rgb(173, 225, 245);
+    color: white;
+    font-size: 1.2em;
+    letter-spacing: 2px;
+}
+
+.join_name {
+    margin-top: 20px;
+    width: 80%;
+}
+
+.join_name input {
+    width: 100%;
+    height: 50px;
+    border-radius: 30px;
+    margin-top: 10px;
+    padding: 0px 20px;
+    border: 1px solid lightgray;
+    outline: none;
+}
+
+.join_date {
+    margin-top: 20px;
+    width: 80%;
+}
+
+.join_date input {
+    width: 100%;
+    height: 50px;
+    border-radius: 30px;
+    margin-top: 10px;
+    padding: 0px 20px;
+    border: 1px solid lightgray;
+    outline: none;
+}
+
+.join_phone {
+    margin-top: 20px;
+    width: 80%;
+}
+
+.join_phone input {
+    width: 100%;
+    height: 50px;
+    border-radius: 30px;
+    margin-top: 10px;
+    padding: 0px 20px;
+    border: 1px solid lightgray;
+    outline: none;
+}
+
+.join_email {
+    margin-top: 20px;
+    width: 80%;
+}
+
+.join_email input {
+    width: 100%;
+    height: 50px;
+    border-radius: 30px;
+    margin-top: 10px;
+    padding: 0px 20px;
+    border: 1px solid lightgray;
+    outline: none;
+}
+
+/*=============================customerService=============================*/
+
+.box {
+    display: inline-block;
+    /* Display boxes inline */
+    border: 2px solid black;
+    padding: 10px;
+    border-radius: 10%;
+    /* Make the box circular */
+    margin-right: 100px;
+    margin-left: 55px;
+    /* Add some space between boxes */
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
+    /* Add box shadow */
+}
+
+.box2 {
+    border: 2px solid black;
+    padding: 10px;
+    height: 300px;
+    border-radius: 10px;
+    /* Make the box circular */
+    margin-top: 20px;
+    /* Add some space above the box */
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
+    /* Add box shadow */
+}
+
+.form {
+    text-align: center;
+    height: 50px;
+    background-color: gainsboro;
+    border-radius: 10px;
+    border: 3px solid gainsboro;
+    font-weight: bold;
+}
+
+.form1 {
+    padding-inline: 20px;
+    height: 50px;
+    border-radius: 10px;
+    border: 1px solid gainsboro;
+
+
+}
+
+.header h1 {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.header .contact-button {
+    float: right;
+    background-color: rgb(86, 121, 219);
+    color: white;
+    font-size: 19px;
+    margin-top: 5px;
+    padding: 10px 20px;
+    width: 120px;
+    height: 40px;
+    line-height: 10px;
+}
+
+/* =============================customerServiceWrite============================= */
+.form-label {
+    font-weight: bold;
+}
+
+/* =============================event============================= */
+.event {
+    color: black;
+    font-weight: bold;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -10px;
+    margin-right: 720px;
+}
+
+.event-image {
+    margin-top: 20px;
+    margin-left: 857px;
+}
+
+/* =============================jobPosting============================= */
+.job-posting {
+    color: black;
+    font-weight: bold;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-right: 800px;
+}
+
+.job-posting.images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3px;
+    margin-left: 740px;
+}
+
+.job-posting.images a {
+    display: inline-block;
+    margin: 10px;
+}
+
+.job-posting.images a img {
+    width: 200px;
+    /* 원하는 이미지 너비로 설정 */
+    height: auto;
+    /* 높이 자동 조정 */
+}
+
+.job-button {
+    width: 100;
+    height: 100;
+    font-size: 16;
+    text-align: center;
+    margin-top: 120px;
+    margin-top: 120px;
+}
+
+
+/* =============================개인고객 회원정보보기============================= */
+
+
 .frame {
     margin-top: 50px;
     margin-inline: 200px;
