--- a/notice/noticeDetail.mustache
+++ b/notice/noticeDetail.mustache
@@ -1,75 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <title>Bootstrap Example</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-</head>
 
-<style>
-    .main {
-
-        margin-inline: 400px;
-
-    }
-
-    .card {
-        border: 1px solid #ccc;
-        padding: 10px;
-        margin: 10px;
-        display: flex;
-        align-items: center;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    }
-
-    .card img {
-        max-width: 100px;
-        max-height: 100px;
-        margin-right: 10px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    }
-
-    .info-box {
-        border: 1px solid #ccc;
-        padding: 30px;
-        width: 600px;
-        height: 200px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    }
-
-    .info-box2 {
-        border: 1px solid #ccc;
-        padding: 30px;
-        width: 600px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    }
-
-    .detail {
-        border: 1px solid #ccc;
-        padding: 20px;
-        width: 600px;
-        height: 500px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    }
-
-    .recruit_detail {
-        margin-inline: 200px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    }
-
-    .skill {
-        margin: 3px;
-        border-radius: 25px;
-        background-color: rgb(213, 235, 243);
-    }
-</style>
-<div class="main">
+<div class="recruit-main">
 
     <body>
-        <div class="recruit_detail ">
+        <div class="recruit-detail ">
             <h1><strong>채용 공고 상세보기</strong></h1>
 
 
@@ -152,12 +86,9 @@
             <br>
 
 
-            <div class=" d-flex justify-content-center">
-
-                <button type="button" class="btn btn-primary btn-lg m-2"> 지원하기</button>
-                <button type="button" class="btn btn-primary btn-lg m-2"> 북마크</button>
-
-
+            <div class="d-flex justify-content-center">
+                <button type="button" class="btn btn-primary btn-xl m-2">지원하기</button>
+                <button type="button" class="btn btn-primary btn-xl m-2">북마크</button>
             </div>
 
             <hr>
@@ -168,7 +99,3 @@
 
 
 
-
-</body>
-
-</html>
