머스태치 찐 최종

--- a/company/companyApplyList.mustache
+++ b/company/companyApplyList.mustache
@@ -1,11 +1,11 @@
 
-    <div class="frame">
+      <div class="frame">
         <div class="container mt-3">
             <div class="row">
                 <div class="col-md-3">
                     <h1 class="text-center ">기업정보보기</h1>
                     <div class="card">
-                        <div class="company-image">
+                        <div class="company_image">
                             <img class="default" src="../images/company.jpg" alt="">
                         </div>
                         <div class="d-flex justify-content-center">
@@ -24,18 +24,16 @@
                 </div>
                 <div class="col-md-9">
                     <div class="d-flex justify-content-between pe-3 my-3">
-                        <div class="small-title">지원서 관리</div>
+                        <div class="smallTitle">지원서 관리</div>
                     </div>
                     <hr />
                     <div class="list-group">
                         <div class="mb-3">
                             <a href="#" class="list-group-item list-group-item-action">
                                 <div class="d-flex justify-content-between">
-
                                     <div class="mb-2">
                                         이력서 제목
                                     </div>
-
                                 </div>
                             </a>
                         </div>
@@ -49,6 +47,9 @@
                                         <div class="mb-2">
                                             마감기한
                                         </div>
+                                    </div>
+                                    <div class="image-container">
+                                        <img src="./images/빈별.png" alt="관심없음" id="heartImg1">
                                     </div>
                                 </div>
                             </a>
@@ -64,6 +65,9 @@
                                             마감기한
                                         </div>
                                     </div>
+                                    <div class="image-container">
+                                        <img src="./images/빈별.png" alt="관심없음" id="heartImg2">
+                                    </div>
                                 </div>
                             </a>
                         </div>
@@ -77,6 +81,9 @@
                                         <div class="mb-2">
                                             마감기한
                                         </div>
+                                    </div>
+                                    <div class="image-container">
+                                        <img src="./images/빈별.png" alt="관심없음" id="heartImg3">
                                     </div>
                                 </div>
                             </a>
@@ -86,3 +93,23 @@
             </div>
         </div>
     </div>
+    <script>
+        const heartImg1 = document.querySelector('#heartImg1');
+        const heartImg2 = document.querySelector('#heartImg2');
+        const heartImg3 = document.querySelector('#heartImg3');
+        let isFavorite1 = false;
+        let isFavorite2 = false;
+        let isFavorite3 = false;
+        heartImg1.addEventListener('click', () => {
+            isFavorite1 = !isFavorite1;
+            heartImg1.src = isFavorite1 ? './images/노란별.png' : './images/빈별.png';
+        });
+        heartImg2.addEventListener('click', () => {
+            isFavorite2 = !isFavorite2;
+            heartImg2.src = isFavorite2 ? './images/노란별.png' : './images/빈별.png';
+        });
+        heartImg3.addEventListener('click', () => {
+            isFavorite3 = !isFavorite3;
+            heartImg3.src = isFavorite3 ? './images/노란별.png' : './images/빈별.png';
+        });
+    </script>
