--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,56 @@
+/*헤더*/
+body {
+    margin: 0;
+    padding: 0;
+}
+
+/* Navigation Styles */
+.navbar {
+    background-color: transparent;
+}
+
+.navbar-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav-link2{
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.nav-item2 {
+    margin-right: 20px; /* Adjust the spacing as needed */
+}
+
+
+
+
+.nav-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+/* Divider Styles */
+hr {
+    border-color: #000000;
+    margin: 0;
+}
+
+/* Join and Login Button Styles */
+.join-and-login {
+    margin-top: 10px;
+}
+.navbar{
+    margin-inline: 20%;
+}
+
+/*푸터*/
+ .bg{
+background-color: whitesmoke;
+}
 /* 공통 */
 * {
     box-sizing: border-box;
@@ -33,7 +86,7 @@ img {
 }
 
 .nav-link {
-    font-size: 15px;
+    font-size: 100px;
     font-weight: bold;
     text-align: center;
     margin-bottom: 10px;
@@ -597,3 +650,349 @@ h2 {
     height: 230px;
     width: 230px;
 }
+
+/*login*/
+
+
+.wrap2 {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: white;
+    }
+    
+    .login2{
+    width: 30%;
+    height: 600px;
+    background: rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    
+    }
+    
+    
+    
+    
+    
+    
+    
+    .login_id {
+    margin-top: 20px;
+    width: 80%;
+    }
+    
+    .login_id input {
+    width: 100%;
+    height: 50px;
+    border-radius: 30px;
+    margin-top: 10px;
+    padding: 0px 20px;
+    border: 1px solid lightgray;
+    outline: none;
+    }
+    
+    .login_pw {
+    margin-top: 20px;
+    width: 80%;
+    }
+    
+    .login_pw input {
+    width: 100%;
+    height: 50px;
+    border-radius: 30px;
+    margin-top: 10px;
+    padding: 0px 20px;
+    border: 1px solid lightgray;
+    outline: none;
+    }
+    
+    .login_etc {
+    padding: 10px;
+    width: 80%;
+    font-size: 14px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+    }
+    
+    
+    
+    /*join*/
+    
+ 
+      .wrap {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background:white;
+      }
+    
+      .login {
+          width: 30%;
+        
+            height: 95vh; 
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+            background: rgba(101, 108, 114, 0.1);
+        
+            border-radius: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding: 20px;
+          }
+     
+      .login_id {
+        margin-top: 20px;
+        width: 80%;
+      }
+      .login_id input {
+        width: 100%;
+        height: 50px;
+        border-radius: 30px;
+        margin-top: 10px;
+        padding: 0px 20px;
+        border: 1px solid lightgray;
+        outline: none;
+      }
+      .login_pw {
+        margin-top: 20px;
+        width: 80%;
+      }
+      .login_pw input {
+        width: 100%;
+        height: 50px;
+        border-radius: 30px;
+        margin-top: 10px;
+        padding: 0px 20px;
+        border: 1px solid lightgray;
+        outline: none;
+      }
+      
+      .submit {
+        margin-top: 20px;
+        width: 80%;
+        
+      }
+      .submit input {
+        width: 100%;
+        height: 50px;
+        border: 0;
+        outline: none;
+        border-radius: 40px;
+        background-color: #3c7bf0;
+        color: white;
+        font-size: 1.2em;
+        letter-spacing: 2px;
+      }
+      
+      .join_name {
+          margin-top: 20px;
+          width: 80%;
+      }
+      
+      .join_name input {
+        width: 100%;
+        height: 50px;
+        border-radius: 30px;
+        margin-top: 10px;
+        padding: 0px 20px;
+        border: 1px solid lightgray;
+        outline: none;
+      }
+      
+      .join_date {
+          margin-top: 20px;
+          width: 80%;
+      }
+      
+      .join_date input {
+        width: 100%;
+        height: 50px;
+        border-radius: 30px;
+        margin-top: 10px;
+        padding: 0px 20px;
+        border: 1px solid lightgray;
+        outline: none;
+      }
+      
+      .join_phone {
+          margin-top: 20px;
+          width: 80%;
+      }
+      
+      .join_phone input {
+        width: 100%;
+        height: 50px;
+        border-radius: 30px;
+        margin-top: 10px;
+        padding: 0px 20px;
+        border: 1px solid lightgray;
+        outline: none;
+      }
+      
+      .join_email {
+          margin-top: 20px;
+          width: 80%;
+      }
+      
+      .join_email input {
+        width: 100%;
+        height: 50px;
+        border-radius: 30px;
+        margin-top: 10px;
+        padding: 0px 20px;
+        border: 1px solid lightgray;
+        outline: none;
+      }
+    
+    /*loginUpdate*/
+    
+    
+    .wrap3 {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: white;
+    }
+    /*여기*/
+    .login3 {
+    width: 30%;
+      height: 800px; 
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+        background: rgba(0, 0, 0, 0.1);
+      border-radius: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 20px;
+    }
+    h2 {
+    color: black;
+    font-size: 2em;
+    margin-top: 0px;
+    }
+    
+    /*recruitDetail*/
+    .recruit-main {
+    
+      margin-inline: 400px;
+    
+    }
+    
+    .card {
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin: 10px;
+      display: flex;
+      align-items: center;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    }
+    
+    .card img {
+      max-width: 100px;
+      max-height: 100px;
+      margin-right: 10px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    }
+    
+    .info-box {
+      border: 1px solid #ccc;
+      padding: 30px;
+      width: 600px;
+      height: 200px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    }
+    
+    .info-box2 {
+      border: 1px solid #ccc;
+      padding: 30px;
+      width: 600px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    }
+    
+    .detail {
+      border: 1px solid #ccc;
+      padding: 20px;
+      width: 600px;
+      height: 500px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    }
+    
+    .recruit-detail {
+      margin-inline: 200px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    }
+    
+    .skill {
+      margin: 3px;
+      border-radius: 25px;
+      background-color: rgb(213, 235, 243);
+    }
+    
+    
+    /*recruitWrite*/
+    
+    .addResume {
+      margin-inline: 200px;
+    }
+    
+    .profile-image {
+      width: auto;
+      /* 너비 강제 조절 */
+      height: auto;
+      /* 높이 자동 조절 */
+      margin-right: 20px;
+      /* 오른쪽 간격 */
+    }
+    
+    .recruit-info {
+      flex: 1;
+    }
+    
+    .image2 {
+      height: 250px;
+      width: 250px;
+    }
+    
+    .input {
+      border: 1px solid rgb(167, 167, 167);
+    }
+    .btn-primary {
+      
+     width: 300px;
+     height: 30px;
+    }
+      
+    /*resumeWrite*/
+    
+    
+    .profile-image2 {
+      width: auto;
+      /* 너비 강제 조절 */
+      height: auto;
+      /* 높이 자동 조절 */
+      margin-right: 20px;
+      /* 오른쪽 간격 */
+    }
+    
+    .info2 {
+      flex: 1;
+    }
+    
+    .image3 {
+      height: 250px;
+      width: 250px;
+    }
