--- a/layout/footer.mustache
+++ b/layout/footer.mustache
@@ -43,3 +43,6 @@
           유료직업소개사업등록번호 : (국내) 제2020-3230259-14-5-00018호 | 사업자등록번호 : 299-86-00021 | 02-539-7118
           © Wantedlab, Inc.</h6>
       </div>
+      
+</body>
+
